samples/_failures_safe/1761150671_bbddd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ac031bc.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_7ac031bc.c:143:9: error: expected expression at end of input
  143 |         token_init(&token, TOKEN_OPERATOR, buffer,
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_7ac031bc.c:143:9: error: too few arguments to function ‘token_init’
./samples/SAFE/__tmp_7ac031bc.c:79:6: note: declared here
   79 | void token_init(struct Token *token, enum TokenType type, const char *value, int line, int column) {
      |      ^~~~~~~~~~
./samples/SAFE/__tmp_7ac031bc.c:143:9: error: expected declaration or statement at end of input
  143 |         token_init(&token, TOKEN_OPERATOR, buffer,
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_7ac031bc.c:143:9: error: expected declaration or statement at end of input
